<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/editDistance"
        style="@style/nCustomEditText"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:hint="@string/distance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/total_kilometers"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/editPrice"
        style="@style/nCustomEditText"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:hint="@string/price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="price per liter"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/editAutonomy"
        style="@style/nCustomEditText"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center"
        android:hint="@string/autonomy" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/kilometers_per_liter"
        android:textAllCaps="true"
        android:textColor="@color/colorDarkGray"
        android:textSize="10sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/textTotal"
        android:textAllCaps="true"
        android:textSize="10dp" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="R$ 0,00"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="35sp" />

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/round_btn"
        android:padding="20dp"
        android:text="Calculate"
        android:textAllCaps="true"
        android:textColor="@color/colorLightGray"
        android:textSize="20sp" />

</LinearLayout>